# APP_Langchain_NLP

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
images/app/: Dockerfile
images/test/: DockerFile
